--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.2.0
   http: ^0.12.2
+  json_annotation: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.0
 
 
 # For information on the generic Dart part of this file, see the
